--- a/src/css/ship.css
+++ b/src/css/ship.css
@@ -1,32 +1,134 @@
 #myGrid1Ship41 , #myGrid2Ship41 {
-    height: 200px;
-    width: 50px;
-    border: 2px solid rgb(0, 0, 107);
+    height: 160px;
+    width: 40px;
+    border: 2px solid rgb(1, 1, 214);
     position: absolute;
     background-color: white;
 }
 
 #myGrid1Ship31 , #myGrid1Ship32 , #myGrid2Ship31 , #myGrid2Ship32{
-    height: 50px;
-    width: 150px;
-    border: 2px solid rgb(0, 0, 107);
+    height: 40px;
+    width: 120px;
+    border: 2px solid rgb(1, 1, 214);
     position: absolute;
     background-color: white;
-
 }
 
-#myGrid1Ship21 , #myGrid1Ship22 , #myGrid1Ship23 , #myGrid2Ship21 , #myGrid2Ship22 , #myGrid1Ship23{ 
-    height: 100px;
-    width: 50px;
-    border: 2px solid rgb(0, 0, 107);
+#myGrid1Ship21 , #myGrid1Ship22 , #myGrid1Ship23 , #myGrid2Ship21 , #myGrid2Ship22 , #myGrid2Ship23{ 
+    height: 80px;
+    width: 40px;
+    border: 2px solid rgb(1, 1, 214);
     position: absolute;
     background-color: white;
 }
 
 #myGrid1Ship11 , #myGrid1Ship12 , #myGrid1Ship13 , #myGrid1Ship14 , #myGrid2Ship11 , #myGrid2Ship12 ,#myGrid2Ship13 , #myGrid2Ship14{ 
-    height: 50px;
-    width: 50px;
-    border: 2px solid rgb(0, 0, 107);
+    height: 40px;
+    width: 40px;
+    border: 2px solid rgb(1, 1, 214);
     position: absolute;
     background-color: white;
+}
+
+/* player 1 */
+#myGrid1Ship41{
+    left: 40px;
+    top: 200px;
+}
+
+#myGrid1Ship31{
+    left: 160px;
+    top: 160px;
+}
+
+#myGrid1Ship32{
+    left: 200px;
+    top: 80px;
+}
+
+#myGrid1Ship21{
+    left: 280px;
+    top: 280px;
+}
+
+#myGrid1Ship22{
+    left: 120px;
+    top: 320px;
+} 
+
+#myGrid1Ship23{
+    left: 80px;
+    top: 40px;
+}
+
+#myGrid1Ship11{
+    left: 0px;
+    top: 120px;
+}
+
+#myGrid1Ship12{
+    left: 160px;
+    top: 0px;
+}
+
+#myGrid1Ship13{
+    left: 320px;
+    top: 200px;
+}
+
+#myGrid1Ship14{
+    left: 200px;
+    top: 280px;
+}
+
+
+/* player 2 */
+#myGrid2Ship41{
+    left: 120px;
+    top: 80px;
+}
+
+#myGrid2Ship31{
+    left: 280px;
+    top: 200px;
+}
+
+#myGrid2Ship32{
+    left: 120px;
+    top: 320px;
+}
+
+#myGrid2Ship21{
+    left: 320px;
+    top: 280px;
+}
+
+#myGrid2Ship22{
+    left: 40px;
+    top: 200px;
+} 
+
+#myGrid2Ship23{
+    left: 240px;
+    top: 40px;
+}
+
+#myGrid2Ship11{
+    left: 0px;
+    top: 80px;
+}
+
+#myGrid2Ship12{
+    left: 360px;
+    top: 40px;
+}
+
+#myGrid2Ship13{
+    left: 200px;
+    top: 240px;
+}
+
+#myGrid2Ship14{
+    left: 40px;
+    top: 360px;
 }
